Implemented memory cache of jobs. Completed and running. Jobs list can be extracted by a new monitor/status page.
